--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     }
 
     h1 {
-      color: darkgreen;
+      color: rgb(41, 105, 15);
       font-size: 48px;
       margin-bottom: 10px;
     }
@@ -92,8 +92,9 @@
       }
 
       .gif-section img {
-        height: 240px; /* mantenemos el tamaño fijo */
+        height: 240px; 
       }
+      
     }
   </style>
 </head>
@@ -125,7 +126,7 @@
     <p>Hecho por López Salmerón Marely de 4°A p/m, junio (el mejor mes porque regresa BTS)</p>
     <p>Te amo tete :3</p>
   </div>
-
+  
 </body>
 </html>
 
