--- a/inorganica.html
+++ b/inorganica.html
@@ -4,6 +4,29 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Química Inorgánica</title>
+  <style>
+     .btn {
+        font-size: 0.95em;
+        padding: 10px 22px;
+      }
+
+
+     .btn:hover {
+      background-color: #ebafdc;
+      transform: scale(1.05);
+    }
+    .btn {
+      display: inline-block;
+      text-decoration: none;
+      background-color: #d39bdd; /* morado pastel */
+      color: white;
+      padding: 12px 28px;
+      border-radius: 10px;
+      font-size: 1em;
+      transition: background-color 0.3s ease, transform 0.3s ease;
+      margin-top: 20px;
+    }
+</style>
 </head>
 <body style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color:#f9f9f9; color:#2e7d32; margin:20px;">
 
@@ -41,7 +64,7 @@
   <p style="max-width:800px; margin:0 auto 15px auto; font-size:18px;">
     La interacción y la cantidad de estas partículas determinan las propiedades y el comportamiento químico de cada elemento. Por ejemplo, el número de protones define el número atómico, que distingue un elemento de otro.
   </p>
-  <a href="#top" style="display:block; text-align:center; margin-bottom:30px; font-weight:bold; color:green; text-decoration:none; font-size:18px;">Subir ⬆</a>
+  <a href="#top" style="display:block; text-align:center; margin-bottom:30px; font-weight:bold; color:green; text-decoration:none; font-size:18px;">Subir</a>
 
   <a name="2"></a>
   <p style="color: rgba(26, 112, 15, 0.7); font-size:30px; text-align:center; font-weight:bold; margin-top:40px; margin-bottom:20px;">
@@ -95,7 +118,7 @@
       </tr>
     </tbody>
   </table>
-  <a href="#top" style="display:block; text-align:center; margin-bottom:30px; font-weight:bold; color:green; text-decoration:none; font-size:18px;">Subir ⬆</a>
+  <a href="#top" style="display:block; text-align:center; margin-bottom:30px; font-weight:bold; color:green; text-decoration:none; font-size:18px;">Subir</a>
 
   <a name="3"></a>
   <p style="color: rgba(26, 112, 15, 0.7); font-size:30px; text-align:center; font-weight:bold; margin-top:40px; margin-bottom:20px;">
@@ -136,7 +159,7 @@
       </tr>
     </tbody>
   </table>
-  <a href="#top" style="display:block; text-align:center; margin-bottom:30px; font-weight:bold; color:green; text-decoration:none; font-size:18px;">Subir ⬆</a>
+  <a href="#top" style="display:block; text-align:center; margin-bottom:30px; font-weight:bold; color:green; text-decoration:none; font-size:18px;">Subir</a>
 
   <a name="4"></a>
   <p style="color: rgba(26, 112, 15, 0.7); font-size:30px; text-align:center; font-weight:bold; margin-top:40px; margin-bottom:20px;">
@@ -182,7 +205,7 @@
       </tr>
     </tbody>
   </table>
-  <a href="#top" style="display:block; text-align:center; margin-bottom:30px; font-weight:bold; color:green; text-decoration:none; font-size:18px;">Subir ⬆</a>
+  <a href="#top" style="display:block; text-align:center; margin-bottom:30px; font-weight:bold; color:green; text-decoration:none; font-size:18px;">Subir</a>
 <a name="5"></a> 
 <p style="color: rgba(26, 112, 15, 0.7); font-size: 30px; text-align: center; font-weight: bold; margin-top: 40px; margin-bottom: 20px;">
   Cálculos químicos
@@ -244,7 +267,8 @@
   Este cálculo es la base para muchos otros cálculos estequiométricos que permiten, por ejemplo, determinar cuántos gramos de un reactivo son necesarios para producir cierta cantidad de producto, o cuál es el rendimiento esperado de una reacción química.
 </p>
 
-<a href="#top" style="display: block; width: 80px; margin: 0 auto; text-align: center; text-decoration: none; color: green; font-weight: bold;">Subir ⬆</a>
+<a href="#top" style="display: block; width: 80px; margin: 0 auto; text-align: center; text-decoration: none; color: green; font-weight: bold;">Subir</a>
+<center><a href="index.html" class="btn">Volver al inicio</a></center>
  <p>Gracias por visitar, espero que aprendan mucho aquí :b</p>
     <p>Hecho por López Salmerón Marely de 4°A p/m, junio (el mejor mes porque regresa BTS)</p>
     <p>Te amo tete :3</p>
