--- a/organica.html
+++ b/organica.html
@@ -3,11 +3,34 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Química Orgánica Completa</title>
+  <title>Química Orgánica</title>
+  <style>
+      .btn {
+        font-size: 0.95em;
+        padding: 10px 22px;
+      }
+
+
+      .btn:hover {
+      background-color: #ebafdc;
+      transform: scale(1.05);
+    }
+    .btn {
+      display: inline-block;
+      text-decoration: none;
+      background-color: #d39bdd; /* morado pastel */
+      color: white;
+      padding: 12px 28px;
+      border-radius: 10px;
+      font-size: 1em;
+      transition: background-color 0.3s ease, transform 0.3s ease;
+      margin-top: 20px;
+    }
+</style>
 </head>
 <body style="background-color: #d7f0d3; font-family: 'Trebuchet MS', sans-serif; margin: 0; padding: 20px;">
 
-  <h1 style="color: #2db91b; font-size: 48px; text-align: center; font-weight: bold; margin-bottom: 40px;">
+  <h1 style="color: #49d436; font-size: 48px; text-align: center; font-weight: bold; margin-bottom: 40px;">
     Química Orgánica
   </h1>
 
@@ -55,10 +78,12 @@
     </ul>
 
   </section>
+  <a href="http://www.objetos.unam.mx/quimica/compuestosDelCarbono/grupos-funcionales/index.html#tabs-2">Ver mas</a>
+ <a href="#top" style="display: block; width: 80px; margin: 0 auto; text-align: center; text-decoration: none; color: rgb(171, 206, 219); font-weight: bold;">Subir</a>
+
 
   <section id="isomeria" style="max-width: 700px; margin: 0 auto 70px auto;">
-<a href="http://www.objetos.unam.mx/quimica/compuestosDelCarbono/grupos-funcionales/index.html#tabs-2">Ver mas</a>
-    <h2 style="color: #1a700f; font-size: 32px; text-align: center; font-weight: bold; margin-bottom: 30px;">
+<h2 style="color: #1a700f; font-size: 32px; text-align: center; font-weight: bold; margin-bottom: 30px;">
       Isomería
     </h2>
 
@@ -89,6 +114,7 @@
     </ul>
 
   </section>
+<a href="#top" style="display: block; width: 80px; margin: 0 auto; text-align: center; text-decoration: none; color: rgb(171, 206, 219); font-weight: bold;">Subir</a>
 
   <section id="nomenclatura" style="max-width: 700px; margin: 0 auto 70px auto;">
 
@@ -144,6 +170,7 @@
     </p>
 
   </section>
+<a href="#top" style="display: block; width: 80px; margin: 0 auto; text-align: center; text-decoration: none; color: rgb(171, 206, 219); font-weight: bold;">Subir</a>
 
   <section id="estructuras" style="max-width: 700px; margin: 0 auto 40px auto;">
 
@@ -169,8 +196,10 @@
   </section>
 
   <p style="text-align: center; margin-top: 40px; font-size: 16px;">
-    <a href="#top" style="color: #2db91b; text-decoration: none;">⬆ Volver arriba</a>
+<a href="#top" style="display: block; width: 80px; margin: 0 auto; text-align: center; text-decoration: none; color: rgb(171, 206, 219); font-weight: bold;">Subir</a>
+
   </p>
+ <center><a href="index.html" class="btn">Volver al inicio</a></center>
  <p>Gracias por visitar, espero que aprendan mucho aquí :b</p>
     <p>Hecho por López Salmerón Marely de 4°A p/m, junio (el mejor mes porque regresa BTS)</p>
     <p>Te amo tete :3</p>
