--- a/preguntas.html
+++ b/preguntas.html
@@ -3,13 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Preguntas de Química</title>
+   <style>
+</style>
 </head>
 <frameset cols="50%, 50%">
   <frame src="preguntasorganica.html" name="organica" style="border: 1px solid green;">
   <frame src="preguntasinorgananica.html" name="inorganica" style="border: 1px solid blue;">
   <noframes>
     <body>
-      Tu navegador no soporta frames. Usa uno más moderno 🧪.
+      Tu navegador no soporta frames. Usa uno más moderno .
     </body>
   </noframes>
 </frameset>
