--- a/preguntasorganica.html
+++ b/preguntasorganica.html
@@ -7,22 +7,22 @@
 </head>
 <body style="font-family: Arial, sans-serif; background-color: #f0fff0; padding: 20px; color: #333;">
 <p style="color: #2a7a2a;font-size: 48;"><b>Preguntas de quimica organica</b></p>
-  <nav>
-    <ol >
+    <nav>
+    <ol type="A" style="list-style: none; padding: 0; display: flex; flex-wrap: wrap; gap: 10px;">
       <li style="background-color: #d4f5d4; padding: 8px 12px; border-radius: 5px;">
-        <a href="#1" style="color: green; text-decoration: none; font-weight: bold;">Grupos funcionales</a>
+        <a href="#1" style="text-decoration: none; color: green; font-weight: bold;">Grupos funcionales</a>
       </li>
       <li style="background-color: #d4f5d4; padding: 8px 12px; border-radius: 5px;">
-        <a href="#2" style="color: green; text-decoration: none; font-weight: bold;">Isomería</a>
+        <a href="#2" style="text-decoration: none; color: green; font-weight: bold;">Isomería</a>
       </li>
       <li style="background-color: #d4f5d4; padding: 8px 12px; border-radius: 5px;">
-        <a href="#3" style="color: green; text-decoration: none; font-weight: bold;">Nomenclatura orgánica</a>
+        <a href="#3" style="text-decoration: none; color: green; font-weight: bold;">Nomenclatura orgánica </a>
       </li>
       <li style="background-color: #d4f5d4; padding: 8px 12px; border-radius: 5px;">
-        <a href="#4" style="color: green; text-decoration: none; font-weight: bold;">Reacciones orgánicas</a>
+        <a href="#4" style="text-decoration: none; color: green; font-weight: bold;">Reacciones orgánicas</a>
       </li>
       <li style="background-color: #d4f5d4; padding: 8px 12px; border-radius: 5px;">
-        <a href="#5" style="color: green; text-decoration: none; font-weight: bold;">Reconocimiento de estructuras</a>
+        <a href="#5" style="text-decoration: none; color: green; font-weight: bold;">Reconocimiento de estructuras</a>
       </li>
     </ol>
   </nav>
