--- a/galeria.html
+++ b/galeria.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Galería Química Creativa</title>
+  <title>Galería Química</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -45,10 +45,6 @@
       clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
     }
 
-    .clip-corazon img {
-      clip-path: path("M24.5,5.8c-4.6,0-7.4,3.2-8.5,5.4c-1.1-2.3-3.9-5.4-8.5-5.4C2.5,5.8,0,9.1,0,13.5 c0,6.9,12.3,14.3,16,17.3c3.7-3.1,16-10.5,16-17.3C32,9.1,29.5,5.8,24.5,5.8z");
-    }
-
     .clip-rombo img {
       clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
     }
@@ -81,6 +77,25 @@
       color: darkgreen;
       font-size: 1rem;
     }
+    .btn {
+        font-size: 0.95em;
+        padding: 10px 22px;
+    }
+    .btn:hover {
+      background-color: #ebafdc;
+      transform: scale(1.05);
+    }
+    .btn {
+      display: inline-block;
+      text-decoration: none;
+      background-color: #d39bdd; /* morado pastel */
+      color: white;
+      padding: 12px 28px;
+      border-radius: 10px;
+      font-size: 1em;
+      transition: background-color 0.3s ease, transform 0.3s ease;
+      margin-top: 20px;
+    }
   </style>
 </head>
 <body>
@@ -92,44 +107,45 @@
 
     <a href="https://www.cerebriti.com/juegos-de-qu%C3%ADmica/tag/mas-recientes/" target="_blank" class="marco clip-estrella">
       <img src="https://i.pinimg.com/736x/46/ea/70/46ea70bc141d119aa85073afaa0ba2e5.jpg" alt="Juego Químico">
-      <div class="titulo-img">Juego Químico ⭐</div>
+      <div class="titulo-img">Juego Químico</div>
     </a>
 
     <div class="marco clip-cuadro">
       <img src="estructuratomica.png" alt="estructura-atomica">
-      <div class="titulo-img">Estructura atomica </div>
+      <div class="titulo-img">Estructura atomica</div>
     </div>
     <div class="marco clip-rombo">
       <img src="propiedadesperiodicas.png" alt="Propiedades Periódicas">
-      <div class="titulo-img">Propiedades Periódicas 🔷</div>
+      <div class="titulo-img">Propiedades Periódicas</div>
     </div>
     <div class="marco clip-flor">
       <img src="enlacesquimicos.png" alt="Enlaces Químicos">
-      <div class="titulo-img">Enlaces Químicos 🌸</div>
+      <div class="titulo-img">Enlaces Químicos</div>
     </div>
     <div class="marco clip-cuadro">
       <img src="compuestosinorgancios.png" alt="Compuestos Inorgánicos">
-      <div class="titulo-img">Compuestos Inorgánicos 🧂</div>
+      <div class="titulo-img">Compuestos Inorgánicos</div>
     </div>
     <div class="marco clip-nube">
       <img src="calculosquimicos.png" alt="Cálculos Químicos">
-      <div class="titulo-img">Cálculos Químicos ☁️</div>
+      <div class="titulo-img">Cálculos Químicos</div>
     </div>
 
     <div class="marco clip-gota">
       <img src="gruposfuncionales.png" alt="Grupos Funcionales">
-      <div class="titulo-img">Grupos Funcionales 💧</div>
+      <div class="titulo-img">Grupos Funcionales</div>
     </div>
     <div class="marco clip-rombo">
       <img src="isomeria.png" alt="Isomería">
-      <div class="titulo-img">Isomería 🔷</div>
+      <div class="titulo-img">Isomería</div>
     </div>
    
     <div class="marco clip-cuadro">
       <img src="reaccionesorganicas.png" alt="Reacciones Orgánicas">
-      <div class="titulo-img">Reacciones Orgánicas ⚗️</div>
+      <div class="titulo-img">Reacciones Orgánicas</div>
     </div>
   </div>
+  <center><a href="index.html" class="btn">Volver al inicio</a></center>
  <p>Gracias por visitar, espero que aprendan mucho aquí :b</p>
     <p>Hecho por López Salmerón Marely de 4°A p/m, junio (el mejor mes porque regresa BTS)</p>
     <p>Te amo tete :3</p>
